# PSync

./: .gitignore  PKGBUILD  README.md  build_and_upload.sh  pyproject.toml  setup.cfg  test_norm_arguments.py  test_options.py
psync/: drive.py  local.py  logger.py  rclone.py
src/: drive.py  local.py  logger.py  main.py  path.py  psync.py  rclone.py  remote.py
src/psync/: drive.py  local.py  path.py  rclone.py  remote.py
test/: test_norm_arguments.py  test_options.py
