[project]
name = 'psync'
version = '0.2.10'
authors = [
    {name='Max Tiedl', email='max.tiedl@gmx.de'},
]
description = 'Sync your local filesystem with a rclone remote by using watchdog for local file changes.'
readme = 'README.md'
requires-python = '>=3.3'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
]
dependencies = [
    "watchdog>=3.0",
    "schedule>=1.2",
    "google-api-python-client>=2.86",
    "google_auth_oauthlib>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",

]
[project.urls]
'Homepage' = 'https://github.com/tiedl25/PSync'
[tool.setuptools]
package-dir = {'' = 'src'} 
[project.scripts]
psync = 'psync.main:main'
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "watchdog>=3.0",
    "schedule>=1.2",
    "google-api-python-client>=2.86",
    "google_auth_oauthlib>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]
build-backend = "setuptools.build_meta"
[options]
install_requires = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]