[metadata]
name = psync
version = 0.0.1
author = Max Tiedl
author_email = max.tiedl@gmx.de
description = Sync your local filesystem with a rclone remote by using inotify
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiedl25/PSync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src
    
[options.entry_points]
console_scripts =
    psync = src.psync:main
