[metadata]
name = psync
version = 0.0.5-1
author = Max Tiedl
author_email = max.tiedl@gmx.de
description = Sync your local filesystem with a rclone remote by using inotify
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiedl25/PSync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires =
    inotify
    numpy
    schedule
package_dir=
    =src
python_requires >= 3.3
include_package_data = True

[options.packages.find]
where=src
    
[options.entry_points]
console_scripts =
    psync = psync:main
