[metadata]
name = psync
version = 0.1.5
author = Max Tiedl
author_email = max.tiedl@gmx.de
description = Sync your local filesystem with a rclone remote by using watchdog for local file changes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiedl25/PSync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires =
    watchdog
    trash-cli
    numpy
    schedule
    os 
    subprocess
    time
    threading
    pathlib
    datetime
    queue
    logging
    sys
    re
    argparse
    io
package_dir=
    =src
python_requires >= 3.3
include_package_data = True

[options.packages.find]
where=src
    
[options.entry_points]
console_scripts =
    psync = psync:main
